@@ -1,5 +1,7 @@
 <?php
 
+if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You are not allowed to call this page directly.'); }
+
 /**
  * @title TinyMCE Button Integration
  * @author Alex Rabe
